tests/errors/erro_if_scope.lua
function void main()
    if true then
        local x : integer = 1;
        print(x);
    end
    -- Uso fora do bloco deve falhar
    print(x);
end
